Revert "fix alignment"
This reverts commit 1711f07db7d88862a0f4bfe58a1834b252d92bcc.

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -8,7 +8,6 @@
 }
 
 .center {
-  align-self: center;
   display: flex;
   flex-direction: column;
   align-items: center;
